versao 2.0, com atualizaçao de estilo da landinpage, como a palheta de cores e com o tema de verde e preto, e de informacoes como o acrescimo das skills de REACT, ANGULAR, NODE.JS e logica de programacao avancada, com atualizaçao do arquivo do curriculo.

--- a/pages/curriculumvitae.html
+++ b/pages/curriculumvitae.html
@@ -95,7 +95,27 @@
 
                     <ul>
                         <li class="item-skills">
+                            INGLÊS INTERMEDIÁRIO
+                            <a class="link-item-skills" 
+                            href="" target="_blank"></a>
+                        </li>
+                        <li class="item-skills">
+                            REACT
+                            <a class="link-item-skills" 
+                            href="" target="_blank"></a>
+                        </li>
+                        <li class="item-skills">
+                            ANGULAR
+                            <a class="link-item-skills" 
+                            href="" target="_blank"></a>
+                        </li>
+                        <li class="item-skills">
                             HTML5, CSS, JAVASCRIPT
+                            <a class="link-item-skills" 
+                            href="" target="_blank"></a>
+                        </li>
+                        <li class="item-skills">
+                            C,C++, NODE.JS
                             <a class="link-item-skills" 
                             href="" target="_blank"></a>
                         </li>
@@ -106,6 +126,11 @@
                                 target="_blank">
                                 <img class="link-ext" 
                                         src="../img/link-exte.png" alt="Simbolo de link externo"></a>
+                        </li>
+                        <li class="item-skills">
+                            LÓGICA DE PROGRAMAÇÃO AVANÇADA
+                            <a class="link-item-skills" 
+                            href="" target="_blank"></a>
                         </li>
                         <li class="item-skills">
                             G SUITE, DOCS E APPS GOOGLE EM NÍVEL DE SCRIPTS E MACROS 
@@ -123,17 +148,7 @@
                             href="" target="_blank"></a>
                         </li>
                         <li class="item-skills">
-                            PROGRAMAÇÃO ESTRUTURADA EM C
-                            <a class="link-item-skills" 
-                            href="" target="_blank"></a>
-                        </li>
-                        <li class="item-skills">
-                            NODE.JS
-                            <a class="link-item-skills" 
-                            href="" target="_blank"></a>
-                        </li>
-                        <li class="item-skills">
-                                TERMINAL LINUX 
+                                SERVIDORES LINUX 
                             <a class="link-item-skills" 
                                 href="../assets/certificado_terminal_linux - Alison C.pdf"
                                 target="_blank">
@@ -161,7 +176,7 @@
             <div id="sidenav" class="div-area">
 
                 <img id="foto-perfil" class="div-item-sidenav"
-                        src="../img/foto-final.jpg" 
+                        src="../img/foto-colorida.png" 
                         alt="Foto de perfil">
 
                 <div id="contatos" class="div-item-sidenav">
