--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="frist-div" class="div-sec-lpage container-flex-column-center">
         <h1 id="title-one" 
             class="special-elite-anime typing-animation">
-            ALISON CLAYTON | Front-End Developer
+            ALISON CLAYTON | Web Developer
         </h1>
     </div>
 
